Fix bug where range fields are hidden while interacting on mobile

--- a/src/sass/_pane.scss
+++ b/src/sass/_pane.scss
@@ -253,7 +253,8 @@
       .emoji-picker {
         opacity: 0;
 
-        &.image-upload-field {
+        &.image-upload-field,
+        &.range-field {
           opacity: 1;
           background: transparent !important;
           border-color: transparent;
